@@ -1,5 +1,8 @@
 2000-12-11  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
+	* Makefile.am, mkfntab-c.m4, mkfntab-h.m4: merge .proto files into
+	m4 files.
+
 	* readdir.c (read_dir): display progress.
 
 2000-12-10  Dieter Baron  <dillo@danbala.tuwien.ac.at>
